# contato-jonatasoliveira.me

./: .gitignore  README.md  config.py  pyproject.toml
contrib/: env-example
core/example/: constants.py  resources.py
core/factories/: app_factory.py  blueprints_factory.py
core/mail_sender/: __init__.py  callback.py  constants.py  exception.py  models.py  serializers.py  service.py
ext/: restplus.py
migrations/versions/: 4e4ecf936f24_.py
